src/test/data/c/fail/labaddr_undeclared.c
void *
f(void) {
  return &&nowhere;
}
